small error in derivation

--- a/src/pages/sol/material_properties.astro
+++ b/src/pages/sol/material_properties.astro
@@ -268,8 +268,8 @@ Stresses above the plastic limit (<InlineEquation equation="\\sigma_Y < \\sigma"
     \\frac{\\partial V}{\\partial x} &= \\frac{\\partial d}{\\partial x}\\frac{\\pi d}{2}L + L \\frac{\\pi d^2}{4} \\\\
     &= -\\nu d \\frac{\\pi d}{2}L + L \\frac{\\pi d^2}{4} \\\\
     &= -\\nu \\frac{\\pi d^2}{2}L + L \\frac{\\pi d^2}{4} \\\\
-    &= \\frac{\\pi d^2L}{2}\\left( 1- 2\\nu \\right) \\\\
-    &= 2V\\left( 1- 2\\nu \\right) \\\\
+    &= \\frac{\\pi d^2L}{4}\\left( 1- 2\\nu \\right) \\\\
+    &= V\\left( 1- 2\\nu \\right) \\\\
     \\end{aligned}` />
 
     <p>
