Fix nav bar on stress concentrations and typo on GLS

--- a/src/pages/md/Graphical_Linkage_Sythesis.astro
+++ b/src/pages/md/Graphical_Linkage_Sythesis.astro
@@ -41,7 +41,7 @@ import Enumerate from "../../components/Enumerate.astro";
 
     <SubSection id="GLS" title="Graphical Linkage Sythesis Intro">
         <p>
-            Kinematic synthesis (also known as mechanism synthesis) is the act if designing mechanisms with a specified motion to perform a specific task. Kinematic synthesis often follows this procedure:
+            Kinematic synthesis (also known as mechanism synthesis) is the act of designing mechanisms with a specified motion to perform a specific task. Kinematic synthesis often follows this procedure:
         </p>
         <Enumerate>
             <Item>Define desired <strong>motion</strong>. Does your mechanism need to open and close a lid or mimic the way an animal walks? What is motion you are trying to achieve? </Item>
