--- a/src/layouts/CourseMenuLayout.astro
+++ b/src/layouts/CourseMenuLayout.astro
@@ -112,6 +112,7 @@ const { title } = Astro.props;
 	:root {
 		--illini-orange: #ff5f05;
 		--illini-blue: #13294B;
+		--altgeld-orange: #c84113;
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
 		--accent-dark: 49, 10, 101;
