--- a/src/pages/about/docs.astro
+++ b/src/pages/about/docs.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../../layouts/BlankLayout.astro";
+import Navbar from "../../components/Navbar.astro";
 import Section from "../../components/Section.astro";
 import SubSection from "../../components/SubSection.astro";
 import SubSubSection from "../../components/SubSubSection.astro";
@@ -24,6 +25,7 @@ import Col from "../../components/Col.astro"
 import Warning from "../../components/Warning.astro"
 import Plotly from "../../components/Plotly.astro";
 
+
 ---
 
 <style>
@@ -37,7 +39,78 @@ import Plotly from "../../components/Plotly.astro";
 
 <Layout title="Style Guide & Documentation">
 
-<Section title="Style Guide & Documentation">
+<!-- 
+<div slot="navtree">
+    <ul class='list-group list-group-flush py-0'>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#components'>Components</a>
+        <ul class='list-group list-group-flush py-0'>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#importing'>Importing</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#inserting'> Inserting </a></li>
+    </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#branding'> Branding </a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general-page-format'> General Page Format </a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#section-types'> Section Types </a>
+        <ul class='list-group list-group-flush py-0'>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#section'> Page Title </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#sub-section'> Page Sections </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#sub-sub-section'> Page Sub Sections </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#sub-sub-sub-section'> Page Sub Sub Sections </a></li>
+    </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#paragraph-font'>Paragraph and Font Options</a>
+        <ul class='list-group list-group-flush py-0'>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#new-paragraph'> New Patagraph </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#lists'> Lists </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#numbered-lists'> Numbered Lists </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#multi-column'> Multi Column </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#italics'> Italics </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#bold'> Bold </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#underline'> Underline </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#font-customizations'> Other </a></li>
+    </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#nav-bar'> Navigation Bar </a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#links'> Inserting Links </a>
+        <ul class='list-group list-group-flush py-0'>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#same-page'> Within Page </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#int-page'> Interal Page </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#ext-page'> External Page </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#ext-video'> External Video </a></li>
+    </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#callout-cards'> Callout Cards </a>
+        <ul class='list-group list-group-flush py-0'>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#review'> Review </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#supplemental'> Supplemental Material </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#extra'> Extra Info</a></li>
+    </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#images'> Images </a></li> 
+-->
+    <!-- <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#animations'> Animations </a></li> -->
+<!-- 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#graphs'> Graphs </a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#equations'> Equations </a>
+        <ul class='list-group list-group-flush py-0'>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#inline-eq'> Inline </a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#display-eq'> Display </a>
+            <ul class='list-group list-group-flush py-0'>
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#single-eq'> Single </a></li>
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#multiple-eq'> Multiple </a></li>
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#derived-eq'> Derived </a></li>
+                </ul>
+            </li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#custom-eq'> Custom </a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#tables'> Tables </a>
+        <ul class='list-group list-group-flush py-0'>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#table-customizations'> Customizations </a></li>
+    </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#examples'> Examples </a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#notes'> Notes </a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#warnings'> Warnings </a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#code-box'> Codebox </a></li>
+    </ul>
+</div>
+-->
+    
+
+<Section title="Style Guide & Documentation" id="style-guide">
 
 The aim of using components is to maintain a consistant look and feel throughout the website, as well as being able to make changes without having to go through every page.
 
@@ -59,17 +132,17 @@ When relevant, we've tried to maintain the LateX naming scheme for ease of use b
 
 </Section>
 
-<SubSection title="Components">
+<SubSection title="Components" id="components">
      
 </SubSection>
 
-<SubSubSection title="Importing Components">
+<SubSubSection title="Importing" id="importing">
     Make sure to import the element at the top of the page before using it. If you get an error like `XXX is not defined`, this is typically what it's refering to. To import an element, use the following syntax.
     <CodeBox code=`import Component from '../../components/Component.astro'` />
     `Component` refers to the name of the component you want to import.
 </SubSubSection>
 
-<SubSubSection title="Inserting Components" >
+<SubSubSection title="Inserting"  id="inserting">
 <p>
 All tags must be closed, which means when you add an element to the page, you must close it to indicate the beginning and the end of that element. 
 </p>
@@ -115,7 +188,7 @@ This concept is very important, and applies to almost every component. The diffe
 </SubSubSection>
 
 
-<SubSection title ="Branding">
+<SubSection title ="Branding" id="branding">
    <p>
         For U of I affiliated pages, use the university specified <a href="https://brand.illinois.edu/visual-identity/color">branding</a>. 
         To change the color to text, you can either enter a hex code, or type in common color names. 
@@ -139,7 +212,7 @@ This concept is very important, and applies to almost every component. The diffe
 
 </SubSection>
 
-<SubSection title="General format of a page">
+<SubSection title="General Page Format" id="general-page-format">
    <p>
     The general format for a page is as follows. Parts can be removed as needed, but try not to rearrange them.
    </p> 
@@ -164,7 +237,7 @@ This concept is very important, and applies to almost every component. The diffe
 
 Remember, these pages are supposed to be reference material, not a textbook. Keep blocks of text to a mimimum and use bullet points and numbering when useful. 
 </SubSection>
-<SubSection id="sections" title="Section Types"></SubSection>
+<SubSection id="section-types" title="Section Types"></SubSection>
 
 <SubSubSection id="section" title="Page Title" >
 
@@ -595,7 +668,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 </SubSubSection> 
 
-<SubSubSection title="Other Font Customizations" id="font-customizations">
+<SubSubSection title="Other" id="font-customizations">
 
     <p>Tag type: Regular</p>
     
@@ -678,7 +751,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 </SubSection>
  
-<SubSubSection title="Within a page" id="same-page">
+<SubSubSection title="Within Page" id="same-page">
 
     <p>Tag type: Regular</p>
     
@@ -698,7 +771,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 </SubSubSection> 
 
-<SubSubSection title="Different page" id="diff-page">
+<SubSubSection title="Internal Page" id="int-page">
 
     <p>Tag type: Regular</p>
     
@@ -718,7 +791,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 </SubSubSection> 
 
-<SubSubSection title="External page" id="ext-page">
+<SubSubSection title="External Page" id="ext-page">
 
     <p>Tag type: Regular</p>
     
@@ -738,7 +811,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 </SubSubSection> 
 
-<SubSubSection title="External video" id="ext-video">
+<SubSubSection title="External Video" id="ext-video">
 
     <p>Tag type: Regular</p>
     
@@ -784,7 +857,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
     Examples:
 </SubSection>
 
-<SubSubSection title="Review Card" id="review">
+<SubSubSection title="Review" id="review">
 
     <p>This card is used to connect back to material prior in the course or potential courses they may have already taken.</p>
     <em>Note:</em> this information should not be needed to understand the material for the course, this is so students can see how courses connect to each other. Pages should be self-contained and not require links to other material.
@@ -825,7 +898,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 </SubSubSection>
 
 
-<SubSubSection title="Supplemental Material Card" id="supplemental">
+<SubSubSection title="Supplemental Material" id="supplemental">
     <p>This card is used to include supplemental material (ie; videos, webpages, open-source textbooks, etc.).</p>
     <CalloutContainerContainer>
         <CodeBox language="html" code=`
@@ -846,9 +919,9 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
     </CalloutContainerContainer>
 </SubSubSection>
 
-<SubSubSection title="Extra Info Card" id="extra">
+<SubSubSection title="Extra Info" id="extra">
     <p>This card is used to connect to future content in the course or other courses students may take in the future.</p>
-    
+    <CalloutContainerContainer>
     <CodeBox language="html" code=`
     <CalloutContainer slot="cards">
         <CalloutCard title="Heads  up!">
@@ -872,7 +945,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
             </p>
         </CalloutCard>
     </CalloutContainer>
-
+</CalloutContainerContainer>
 </SubSubSection>
 
 <SubSection title="Images" id="images">
@@ -919,6 +992,12 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 </SubSection>
 
+<!-- 
+<SubSection title="Animations" id="animations">
+</SubSection>
+-->
+
+    
 <SubSection title="Graphs" id="graphs">
     <CodeBox language="javascript" code=`
     import Plotly from "../../components/Plotly.astro"
@@ -976,7 +1055,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
     </p>
 </SubSection>
 
-<SubSubSection id="inline-eq" title="Inline Equations">
+<SubSubSection id="inline-eq" title="Inline">
     This will create an element that goes along with the text it's included with, and is useful for important equations that need to be part of a paragraph.
 
     <CodeBox language="javascript" code=`
@@ -998,7 +1077,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
     TEXT <InlineEquation equation="eq" /> TEXT.
 </SubSubSection>
 
-<SubSubSection id="display-eq" title="Display Equations">
+<SubSubSection id="display-eq" title="Display ">
     
     This will create an element that takes the entire width of the element it's inside of, and is useful for important equations that deserve to be highlighted.
 
@@ -1020,7 +1099,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
     Examples:
 </SubSubSection>
 
-<SubSubSubSection title="Simple equations" id="simple-eq">
+<SubSubSubSection title="Single" id="single-eq">
     
     <CodeBox language="html" code=`
         <DisplayEquation equation="eq" title="TITLE" background="True" />
@@ -1030,7 +1109,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 </SubSubSubSection>
 
-<SubSubSubSection title="Multiple equations" id="multiple-eq">
+<SubSubSubSection title="Multiple" id="multiple-eq">
     
     <CodeBox language="html" code=`
         <DisplayEquation equation="\\begin{align} eq1 \\\\ eq2 \\\\ eq3 \\end{align}" title="TITLE" background="True" />
@@ -1040,7 +1119,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 </SubSubSubSection>
 
-<SubSubSubSection title="Derived equations" id="derived-eq">
+<SubSubSubSection title="Derived" id="derived-eq">
     
     <CodeBox language="html" code=`
         <DisplayEquation equation="eq" title="TITLE" background="True" derivation="True" id="ID">
@@ -1056,7 +1135,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
             
 </SubSubSubSection>
 
-<SubSubSection id="custom-eq" title="Custom Equations">
+<SubSubSection id="custom-eq" title="Custom">
     
     Same as DisplayEquation, but provides a lot more freedom with how everything looks. Made for when equation boxes don't follow the format above.
 
@@ -1187,7 +1266,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 </SubSection>
 
-<SubSubSection title="Table Customizations" id="table-customizations">
+<SubSubSection title="Customizations" id="table-customizations">
 
     We have added a few utilies to customize the look of your tables while maintaining a consistent look and feel in the pages.
 
