navtree docs page

--- a/src/components/NavtreeContainer.astro
+++ b/src/components/NavtreeContainer.astro
@@ -8,6 +8,8 @@
 
         name = underscore_to_spaces.charAt(0).toUpperCase() + underscore_to_spaces.slice(1)
     } 
+
+    console.log(page, course)
 ---
 
 <style>
