--- a/src/pages/sta/force_systems.astro
+++ b/src/pages/sta/force_systems.astro
@@ -31,7 +31,7 @@ It can be helpful at times to reduce the forces on a body and combine resultant 
 
 Note: These forces and moments will have the same <strong>external</strong> effect on the body, but the internal forces on the rigid body may be different. 
 
-For example, the four systems below are statically equivalent, which means that the sum of external forces and sum of extrenal moments are the same for both systems.
+For example, the four systems below are statically equivalent, which means that the sum of external forces and sum of external moments are the same for both systems.
 
 <Image src='/sta/force_systems/EquivalentSystems.jpg' width='5 '> All four of these systems are statically equivalent. </Image>
 
